Import xterm_208.orig.tar.gz

--- a/configure.in
+++ b/configure.in
@@ -1,10 +1,10 @@
-dnl $XTermId: configure.in,v 1.187 2005/07/07 00:46:14 tom Exp $
+dnl $XTermId: configure.in,v 1.202 2006/01/04 02:10:24 tom Exp $
 dnl
-dnl $XFree86: xc/programs/xterm/configure.in,v 3.70 2005/07/07 00:46:14 dickey Exp $
+dnl $XFree86: xc/programs/xterm/configure.in,v 3.73 2006/01/04 02:10:24 dickey Exp $
 dnl
 dnl ---------------------------------------------------------------------------
 dnl
-dnl Copyright 1997-2004,2005 by Thomas E. Dickey
+dnl Copyright 1997-2005,2006 by Thomas E. Dickey
 dnl
 dnl                         All Rights Reserved
 dnl
@@ -76,6 +76,7 @@ AC_HEADER_TIME
 AM_LANGINFO_CODESET
 
 ###	checks for typedefs
+CF_SIG_ATOMIC_T
 CF_SIZE_T
 AC_CHECK_TYPE(time_t, long)
 AC_TYPE_MODE_T
@@ -97,8 +98,54 @@ AC_CHECK_FUNCS( \
 	wcswidth \
 	wcwidth )
 CF_FUNC_MEMMOVE
-CF_FUNC_TGETENT
 CF_UTMP
+
+CF_HELP_MESSAGE(Compile/Install Options:)
+CF_FUNC_TGETENT
+
+AC_MSG_CHECKING(for directory to install resource files)
+CF_WITH_PATH(app-defaults,
+	[  --with-app-defaults=DIR directory in which to install resource files],
+	[appsdir],[EPREFIX/lib/X11/app-defaults],
+	['\$(exec_prefix)/lib/X11/app-defaults'])
+AC_MSG_RESULT($appsdir)
+AC_SUBST(appsdir)
+
+no_appsdir=
+test "$appsdir" = no && no_appsdir="#"
+AC_SUBST(no_appsdir)
+
+# inherit SINSTALL_OPTS from environment to allow packager to customize it.
+
+AC_MSG_CHECKING(for install-permissions reference)
+AC_ARG_WITH(reference,
+	[  --with-reference=XXX    program to use as permissions-reference],
+	[with_reference=$withval],
+	[with_reference=xterm])
+AC_MSG_RESULT($with_reference)
+
+with_full_paths=yes
+CF_PATH_PROG(XTERM_PATH,$with_reference)
+
+# If any of --program-prefix, --program-suffix or --program-transform-name is
+# given, accept an option tell the makefile to create a symbolic link, e.g.,
+# to "xterm" on install.
+XTERM_SYMLINK=NONE
+AC_SUBST(XTERM_SYMLINK)
+if test "$program_transform_name" != "'s,,,'" ; then
+cf_name=`echo "$program_transform_name" | sed -e '[s,\\$\\$,$,g]'`
+cf_name=`echo xterm |sed -e "$cf_name"`
+AC_MSG_CHECKING(for symbolic link to create to $cf_name)
+AC_ARG_WITH(xterm-symlink,
+	[  --with-xterm-symlink=XXX make symbolic link to installed xterm],
+	[with_symlink=$withval],
+	[with_symlink=xterm])
+AC_MSG_RESULT($with_symlink)
+test -n "$with_symlink" && \
+	test "$with_symlink" != no && \
+	test "$with_symlink" != $cf_name && \
+	XTERM_SYMLINK="$with_symlink"
+fi
 
 AC_MSG_CHECKING(if you want to disable setuid)
 CF_ARG_DISABLE(setuid,
@@ -107,6 +154,41 @@ CF_ARG_DISABLE(setuid,
 	[disable_setuid=no],
 	no)
 AC_MSG_RESULT($disable_setuid)
+
+AC_MSG_CHECKING(if you want to run xterm setuid to a given user)
+AC_ARG_WITH(setuid,
+	[  --with-setuid=XXX       use the given setuid user],
+	[use_given_setuid=$withval],
+	[use_given_setuid=no])
+AC_MSG_RESULT($use_given_setuid)
+
+if test "$use_given_setuid" != no ; then
+	if test "$use_given_setuid" = yes ; then
+		cf_cv_given_setuid=root
+	else
+		cf_cv_given_setuid=$use_given_setuid
+	fi
+	SINSTALL_OPTS="$SINSTALL_OPTS u+s -u $cf_cv_given_setuid"
+fi
+
+AC_MSG_CHECKING(if you want to run xterm setgid to match utmp/utmpx file)
+AC_ARG_WITH(utmp-setgid,
+	[  --with-utmp-setgid=XXX  use setgid to match utmp/utmpx file],
+	[use_utmp_setgid=$withval],
+	[use_utmp_setgid=no])
+AC_MSG_RESULT($use_utmp_setgid)
+
+if test "$use_utmp_setgid" != no ; then
+	if test "$use_utmp_setgid" = yes ; then
+		CF_UTMP_GROUP
+	else
+		cf_cv_utmp_group=$use_utmp_setgid
+	fi
+	AC_DEFINE(USE_UTMP_SETGID)
+	SINSTALL_OPTS="$SINSTALL_OPTS g+s -g $cf_cv_utmp_group"
+fi
+
+AC_SUBST(SINSTALL_OPTS)
 
 AC_MSG_CHECKING(if you want to link with utempter)
 AC_ARG_WITH(utempter,
@@ -146,15 +228,13 @@ LIBS="$LIBS $X_EXTRA_LIBS"
 # Check for openpty() in -lutil if the UNIX98-style pty functions are not
 # available. E.g. for GNU libc 2.0.
 case $host_os in #(vi
-netbsd*)	# 2004/8/15 - revisit this if/when grantpt is known to work.
+freebsd*|netbsd*)	# 2004/8/15 - revisit this if/when grantpt is known to work.
 	AC_CHECK_LIB(util,openpty)
 	;;
 *)
 	AC_CHECK_FUNCS(grantpt, [], AC_CHECK_LIB(util,openpty))
 	;;
 esac
-
-AC_PATH_PROG(XTERM_PATH,xterm)
 
 CF_XKB_BELL_EXT
 AC_CHECK_FUNCS(Xutf8LookupString, [],[
@@ -165,9 +245,11 @@ AC_CHECK_FUNCS(Xutf8LookupString, [],[
 
 CF_WITH_IMAKE_CFLAGS($(MAIN_DEFINES) $(VENDORMANDEFS))
 
+CF_HELP_MESSAGE(Terminal Configuration:)
+
 AC_MSG_CHECKING(for default terminal-id)
 AC_ARG_WITH(terminal-id,
-	[  --with-terminal-id[=V]  set default decTerminalID (default: vt100)],
+	[  --with-terminal-id=V    set default decTerminalID (default: vt100)],
 	[default_termid=$withval],
 	[default_termid=vt100])
 AC_MSG_RESULT($default_termid)
@@ -179,7 +261,7 @@ AC_DEFINE_UNQUOTED(DFT_DECID,"$default_termid")
 
 AC_MSG_CHECKING(for default terminal-type)
 AC_ARG_WITH(terminal-type,
-	[  --with-terminal-type=T  set default \$TERM (default: xterm)],
+	[  --with-terminal-type=T  set default $TERM (default: xterm)],
 	[default_TERM=$withval],
 	[default_TERM=xterm])
 AC_MSG_RESULT($default_TERM)
@@ -187,7 +269,7 @@ AC_DEFINE_UNQUOTED(DFT_TERMTYPE,"$default_TERM")
 
 AC_MSG_CHECKING(for private terminfo-directory)
 AC_ARG_WITH(own-terminfo,
-	[  --with-own-terminfo=P   set default \$TERMINFO (default: from environment)],
+	[  --with-own-terminfo=P   set default $TERMINFO (default: from environment)],
 	[TERMINFO_DIR=$withval],
 	[TERMINFO_DIR=${TERMINFO-none}])
 AC_MSG_RESULT($TERMINFO_DIR)
@@ -503,6 +585,16 @@ else
 	AC_DEFINE(OPT_PTY_HANDSHAKE,0)
 fi
 
+AC_MSG_CHECKING(if you want support for mouse in readline applications)
+CF_ARG_ENABLE(readline-mouse,
+	[  --enable-readline-mouse enable support for mouse in readline applications],
+	[enable_readline_mouse=yes],
+	[enable_readline_mouse=no])
+AC_MSG_RESULT($enable_readline_mouse)
+if test "$enable_readline_mouse" = yes ; then
+	AC_DEFINE(OPT_READLINE,1)
+fi
+
 AC_MSG_CHECKING(if you want support for right-scrollbar)
 CF_ARG_DISABLE(rightbar,
 	[  --disable-rightbar      disable right-scrollbar support],
@@ -587,6 +679,7 @@ CF_ARG_ENABLE(luit,
 AC_MSG_RESULT($enable_luit)
 if test "$enable_luit" = yes ; then
 	AC_DEFINE(OPT_LUIT_PROG,1)
+	CF_PATH_PROG(LUIT,luit)
 fi
 
 AC_MSG_CHECKING(if you want wide-character support)
