--- a/package/debian/control
+++ b/package/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.8.2
 
 Package: xterm-dev
 Architecture: any
-Depends: ${misc:Depends}
+Depends: xbitmaps, libc6 (>= 2.11), libfontconfig1 (>= 2.9.0), libice6 (>= 1:1.0.0), libtinfo5, libutempter0 (>= 1.1.5), libx11-6, libxaw7, libxft2 (>> 2.1.1), libxmu6, libxt6
 Provides: x-terminal-emulator
 Recommends: x11-utils | xutils | bluit
 Description: X terminal emulator (development version)
