--- a/df-install.in
+++ b/df-install.in
@@ -1,9 +1,9 @@
 #!/bin/sh
-# $XTermId: df-install.in,v 1.14 2012/08/27 01:07:19 tom Exp $
+# $XTermId: df-install.in,v 1.15 2018/04/30 23:29:27 tom Exp $
 # -----------------------------------------------------------------------------
 # this file is part of xterm
 #
-# Copyright 2011,2012 by Thomas E. Dickey
+# Copyright 2011-2012,2018 by Thomas E. Dickey
 #
 #                         All Rights Reserved
 #
@@ -42,6 +42,12 @@ OPTS=
 if test $# != 0
 then
 	APP_NAME=$1
+	shift 1
+fi
+
+if test $# != 0
+then
+	ICON_NAME=$1
 	shift 1
 fi
 
@@ -91,7 +97,7 @@ fi
 NEW_FILE=`basename $OLD_FILE`
 sed \
 	-e '/^Encoding=/s%Encoding%'$NO_ENCODING'%' \
-	-e '/^[^#]*Icon=/s%=.*%=xterm-color%' \
+	-e '/^[^#]*Icon=/s%=.*%='$ICON_NAME'%' \
 	-e '/^[^#]*Category=/s%=.*%=@DESKTOP_CATEGORY@%' \
 	-e '/^[^#]*Categories=/s%=.*%=@DESKTOP_CATEGORY@%' \
 	-e '/^[^#]/s%xterm%'$APP_NAME'%g' \
